v1.5.xxxx.0 - unreleased
========================
 NEW    : Added new options to always default to external subtitles, ignore
          embedded subtitles and to set the autoload subtitle paths
 NEW    : LCN support for DVB
 NEW    : Added support for 'in24', 'fl64' and 8-bit 'sowt' audio
 NEW    : Added support for 'IMA4' audio
 NEW    : Added channel encryption detection for DVB-t during scan
 CHANGED: Updated FFmpeg
 CHANGED: Cleaned up and optimized code for QT PCM, small corrections in MP4Splitter
 FIXED  : Ticket #698, VMR-9 (renderless) + pixel shaders crashes
 FIXED  : Ticket #724, Frequency range and bandwidth value are currently
          not taken into account when doing a scan


v1.4.2499.0 - 7 September 2010
==============================
 NEW    : Seamless playback support for multi files BRD
 NEW    : Support for Windows 7 taskbar and thumbnails features
 NEW    : Added Catalan, Dutch and Japanese translations
 NEW    : VSFilter x64 is available
 NEW    : Added internal VP8 Decoder
 NEW    : MPC-HC can be compiled with MSVC2010 and Intel C++ Compiler
 NEW    : Support for MCE remote control (values added in AppCommand column in
          "Options/Player/Keys")
 NEW    : Support of Broadcom Video decoder for VC1, H.264 and MPEG-2
          (hardware acceleration)
 NEW    : Support for DVB subtitles
 NEW    : Open files to Recent Documents
 NEW    : AUTO HDMI MODE 1080p/24 support for fullscreen mode
 NEW    : Ticket #46, add number to AudioDevice list
 NEW    : Sync Renderer dialogs
 NEW    : Real Video decoder in MPCVideoDecoder
 NEW    : Support interlaced mode in fullscreen resolution list
 NEW    : Auto change fullscreen resolution for different video content
 NEW    : Fullscreen Options page
 NEW    : Video decoder, options for DXVA Compatibility check
 NEW    : Support for MPEG-2 bitstreaming in the DXVA decoder
 NEW    : Full screen resolution - support for native 23.976 and 29.97 mode
          (Vista and above only)