@@ -407,6 +407,7 @@ AP4_AtomFactory::CreateAtomFromStream(AP4_ByteStream& stream,
 	  case AP4_ATOM_TYPE_IMA4:
 	  case AP4_ATOM_TYPE_QDMC:
 	  case AP4_ATOM_TYPE_QDM2:
+	  case AP4_ATOM_TYPE_NONE:
 	  case AP4_ATOM_TYPE_RAW:
 	  case AP4_ATOM_TYPE_TWOS:
 	  case AP4_ATOM_TYPE_SOWT:
